[gd_scene load_steps=13 format=3 uid="uid://levelup_ui_001"]

[ext_resource type="Script" path="res://src/ui/level_up_ui.gd" id="1_ui"]
[ext_resource type="Shader" path="res://src/ui/shaders/ui_glow_warp.gdshader" id="2_glow"]
[ext_resource type="Shader" path="res://src/ui/shaders/ui_noise.gdshader" id="3_noise"]
[ext_resource type="Shader" path="res://src/ui/shaders/ui_scanlines.gdshader" id="4_scan"]
[ext_resource type="Shader" path="res://src/ui/shaders/ui_vignette.gdshader" id="5_vignette"]
[ext_resource type="Shader" path="res://src/ui/shaders/ui_shimmer.gdshader" id="6_shimmer"]

[sub_resource type="Gradient" id="Gradient_bg"]
offsets = PackedFloat32Array(0.0, 0.55, 1.0)
colors = PackedColorArray(0.2, 0.9, 1.0, 0.0, 1.0, 0.9, 0.2, 0.25, 0.3, 1.0, 0.5, 0.0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_bg"]
gradient = SubResource("Gradient_bg")
width = 512
height = 512

[sub_resource type="ShaderMaterial" id="ShaderMaterial_glow"]
shader = ExtResource("2_glow")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_noise"]
shader = ExtResource("3_noise")
shader_parameter/opacity = 0.05

[sub_resource type="ShaderMaterial" id="ShaderMaterial_scan"]
shader = ExtResource("4_scan")
shader_parameter/opacity = 0.09
shader_parameter/density = 840.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_vignette"]
shader = ExtResource("5_vignette")
shader_parameter/opacity = 0.32
shader_parameter/softness = 1.8

[sub_resource type="ShaderMaterial" id="ShaderMaterial_icon_shimmer"]
shader = ExtResource("6_shimmer")
shader_parameter/intensity = 0.65
shader_parameter/width = 0.26
shader_parameter/speed = 1.0

[node name="LevelUpUI" type="CanvasLayer"]
layer = 10
script = ExtResource("1_ui")

[node name="Panel" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Dimmer" type="ColorRect" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.72)

[node name="Backdrop" type="Control" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Glow" type="TextureRect" parent="Panel/Backdrop"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
material = SubResource("ShaderMaterial_glow")
texture = SubResource("GradientTexture2D_bg")
expand_mode = 1
stretch_mode = 6
modulate = Color(1, 1, 1, 0.35)

[node name="Noise" type="ColorRect" parent="Panel/Backdrop"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
material = SubResource("ShaderMaterial_noise")
color = Color(1, 1, 1, 1)

[node name="Scanlines" type="ColorRect" parent="Panel/Backdrop"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
material = SubResource("ShaderMaterial_scan")
color = Color(1, 1, 1, 1)

[node name="Vignette" type="ColorRect" parent="Panel/Backdrop"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
material = SubResource("ShaderMaterial_vignette")
color = Color(1, 1, 1, 1)

[node name="Card" type="PanelContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -520.0
offset_top = -300.0
offset_right = 520.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2

[node name="Margin" type="MarginContainer" parent="Panel/Card"]
layout_mode = 2
theme_override_constants/margin_left = 26
theme_override_constants/margin_top = 22
theme_override_constants/margin_right = 26
theme_override_constants/margin_bottom = 22

[node name="VBox" type="VBoxContainer" parent="Panel/Card/Margin"]
layout_mode = 1
theme_override_constants/separation = 18

[node name="Header" type="HBoxContainer" parent="Panel/Card/Margin/VBox"]
layout_mode = 2
theme_override_constants/separation = 18

[node name="LeftHeader" type="VBoxContainer" parent="Panel/Card/Margin/VBox/Header"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 6

[node name="Title" type="Label" parent="Panel/Card/Margin/VBox/Header/LeftHeader"]
layout_mode = 2
text = "LEVEL 1"

[node name="Subtitle" type="Label" parent="Panel/Card/Margin/VBox/Header/LeftHeader"]
layout_mode = 2
text = "Choose a power-up"

[node name="BuildPanel" type="PanelContainer" parent="Panel/Card/Margin/VBox/Header"]
custom_minimum_size = Vector2(320, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="BuildMargin" type="MarginContainer" parent="Panel/Card/Margin/VBox/Header/BuildPanel"]
layout_mode = 2
theme_override_constants/margin_left = 14
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 14
theme_override_constants/margin_bottom = 12

[node name="BuildVBox" type="VBoxContainer" parent="Panel/Card/Margin/VBox/Header/BuildPanel/BuildMargin"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="BuildTitle" type="Label" parent="Panel/Card/Margin/VBox/Header/BuildPanel/BuildMargin/BuildVBox"]
layout_mode = 2
text = "YOUR BUILD"

[node name="Weapons" type="HFlowContainer" parent="Panel/Card/Margin/VBox/Header/BuildPanel/BuildMargin/BuildVBox"]
layout_mode = 2
theme_override_constants/h_separation = 8
theme_override_constants/v_separation = 8

[node name="Stats" type="VBoxContainer" parent="Panel/Card/Margin/VBox/Header/BuildPanel/BuildMargin/BuildVBox"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="Content" type="HBoxContainer" parent="Panel/Card/Margin/VBox"]
layout_mode = 2
theme_override_constants/separation = 18

[node name="ChoicesPanel" type="PanelContainer" parent="Panel/Card/Margin/VBox/Content"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ChoicesMargin" type="MarginContainer" parent="Panel/Card/Margin/VBox/Content/ChoicesPanel"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 14
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 14

[node name="ChoicesVBox" type="VBoxContainer" parent="Panel/Card/Margin/VBox/Content/ChoicesPanel/ChoicesMargin"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="ChoicesTitle" type="Label" parent="Panel/Card/Margin/VBox/Content/ChoicesPanel/ChoicesMargin/ChoicesVBox"]
layout_mode = 2
text = "Pick one"

[node name="ChoicesGrid" type="GridContainer" parent="Panel/Card/Margin/VBox/Content/ChoicesPanel/ChoicesMargin/ChoicesVBox"]
layout_mode = 2
columns = 3
theme_override_constants/h_separation = 12
theme_override_constants/v_separation = 12

[node name="Hint" type="Label" parent="Panel/Card/Margin/VBox/Content/ChoicesPanel/ChoicesMargin/ChoicesVBox"]
layout_mode = 2
text = "Arrows / Mouse to preview â€¢ Enter / A to pick"

[node name="PreviewPanel" type="PanelContainer" parent="Panel/Card/Margin/VBox/Content"]
custom_minimum_size = Vector2(320, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PreviewMargin" type="MarginContainer" parent="Panel/Card/Margin/VBox/Content/PreviewPanel"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 14
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 14

[node name="PreviewVBox" type="VBoxContainer" parent="Panel/Card/Margin/VBox/Content/PreviewPanel/PreviewMargin"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="PreviewTop" type="HBoxContainer" parent="Panel/Card/Margin/VBox/Content/PreviewPanel/PreviewMargin/PreviewVBox"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="Icon" type="ColorRect" parent="Panel/Card/Margin/VBox/Content/PreviewPanel/PreviewMargin/PreviewVBox/PreviewTop"]
custom_minimum_size = Vector2(54, 54)
layout_mode = 2
material = SubResource("ShaderMaterial_icon_shimmer")
color = Color(0.2, 0.9, 1, 1)

[node name="IconGlyph" type="Label" parent="Panel/Card/Margin/VBox/Content/PreviewPanel/PreviewMargin/PreviewVBox/PreviewTop/Icon"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "?"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PreviewMeta" type="VBoxContainer" parent="Panel/Card/Margin/VBox/Content/PreviewPanel/PreviewMargin/PreviewVBox/PreviewTop"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 2

[node name="Name" type="Label" parent="Panel/Card/Margin/VBox/Content/PreviewPanel/PreviewMargin/PreviewVBox/PreviewTop/PreviewMeta"]
layout_mode = 2
text = ""

[node name="Rarity" type="Label" parent="Panel/Card/Margin/VBox/Content/PreviewPanel/PreviewMargin/PreviewVBox/PreviewTop/PreviewMeta"]
layout_mode = 2
text = ""

[node name="Description" type="Label" parent="Panel/Card/Margin/VBox/Content/PreviewPanel/PreviewMargin/PreviewVBox"]
layout_mode = 2
text = ""
autowrap_mode = 3

[node name="Effect" type="Label" parent="Panel/Card/Margin/VBox/Content/PreviewPanel/PreviewMargin/PreviewVBox"]
layout_mode = 2
text = ""
autowrap_mode = 3

[node name="Details" type="VBoxContainer" parent="Panel/Card/Margin/VBox/Content/PreviewPanel/PreviewMargin/PreviewVBox"]
layout_mode = 2
theme_override_constants/separation = 6
